--- a/Index.html
+++ b/Index.html
@@ -2,170 +2,124 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>RFQ Ready - Pricing & Sourcing</title>
-  <link rel="stylesheet" href="./style.css" />
+  <title>What buyers typically gain</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-  <!-- Navigation -->
-  <nav id="navbar">
-    <div class="container">
-      <div class="logo">RFQ Ready</div>
-      <ul class="nav-links">
-        <li><a href="#hero">Home</a></li>
-        <li><a href="#usp">What buyers gain</a></li>
-        <li><a href="#testimonials">Testimonials</a></li>
-        <li><a href="#trust">Buyer Trust</a></li>
-        <li><a href="#pricing">Pricing</a></li>
-      </ul>
-    </div>
-  </nav>
+<section class="usp-section">
+  <h2>What buyers typically gain</h2>
 
-  <!-- Hero Section -->
-  <section id="hero">
-    <div class="container hero-content">
-      <p class="pre-title">RFQ sourcing for furnitures & homeware buyers</p>
-      <h1>Upload a product. Get the price you should pay</h1>
-      <p class="subtitle">
-        Decision-ready RFQ report with comparable pricing, risk flags, and a best-fit supplier recommendation
-      </p>
-      <button class="cta-btn">Get Started</button>
-    </div>
-    <div class="flow-animation">
-      <!-- Flow chart animation placeholder -->
-      <p>Flow chart animation will appear here</p>
-    </div>
-  </section>
+  <div class="usp-grid">
 
-  <!-- USP Section -->
-  <section id="usp">
-    <div class="container">
-      <h2>What buyers typically gain</h2>
-      <div class="usp-list">
-        <div class="usp-item">
-          <div class="icon">📈</div>
-          <h3>Margin impact</h3>
-          <p>+10-20% margin uplift</p>
-        </div>
-        <div class="usp-item">
-          <div class="icon">⏱️</div>
-          <h3>Time saved</h3>
-          <p>Up to ~80% less sourcing time</p>
-        </div>
-        <div class="usp-item">
-          <div class="icon">🤝</div>
-          <h3>Alignment</h3>
-          <p>Independent & buyer-paid only</p>
-        </div>
-        <div class="usp-item">
-          <div class="icon">✅</div>
-          <h3>Compliance readiness</h3>
-          <p>Reach/EN/FSC/EUDR signals + document checklist</p>
-        </div>
-        <div class="usp-item">
-          <div class="icon">📦</div>
-          <h3>Packaging leverage</h3>
-          <p>Carton optimization notes to reduce landed cost</p>
-        </div>
-        <div class="usp-item">
-          <div class="icon">🎯</div>
-          <h3>Best-fit recommendation</h3>
-          <p>Not a list – a clear recommendation with rationale</p>
-        </div>
-      </div>
+    <div class="usp-item">
+      <div class="icon">📈</div>
+      <h3>Margin impact</h3>
+      <p><strong>+10–20% margin uplift</strong><br>
+      Smarter sourcing decisions with direct bottom-line impact.</p>
     </div>
-  </section>
 
-  <!-- Testimonials -->
-  <section id="testimonials">
-    <div class="container">
-      <h2>Testimonials</h2>
-      <div class="testimonial-slider">
-        <div class="testimonial active">
-          <p>“This paid for itself on the first RFQ. We got a defendable benchmark and a clear best-fit recommendation — without changing the spec.”</p>
-          <footer>- Category Manager, EU Home & Living Retail (mid-size chain)</footer>
-        </div>
-        <div class="testimonial">
-          <p>“RFQ Ready turned sourcing into a P&L lever. We stopped negotiating blind and found margin upside where it actually mattered.”</p>
-          <footer>- Head of Buying, Nordic furniture retailer (50–100 stores)</footer>
-        </div>
-        <div class="testimonial">
-          <p>“The structured comparison changed our internal discussion from opinions to numbers. That’s what protected margin on a key launch.”</p>
-          <footer>- Category Director, Outdoor Furniture (EU)</footer>
-        </div>
-        <div class="testimonial">
-          <p>“We used it to benchmark an incumbent supplier. The report made the decision obvious — and gave us a clean, low-risk switch path.”</p>
-          <footer>- Procurement Lead, DTC Home Brand</footer>
-        </div>
-      </div>
-      <div class="testimonial-controls">
-        <button id="prevTestimonial">←</button>
-        <button id="nextTestimonial">→</button>
-      </div>
+    <div class="usp-item">
+      <div class="icon">⏱️</div>
+      <h3>Time saved</h3>
+      <p><strong>Up to ~80% less sourcing time</strong><br>
+      Skip weeks of back-and-forth and manual comparison.</p>
     </div>
-  </section>
 
-  <!-- Buyer Trust -->
-  <section id="trust">
-    <div class="container">
-      <h2>Buyer trust, measured</h2>
-      <ul>
-        <li>400+ factories in network</li>
-        <li>Category-matched, Asia + beyond</li>
-        <li>2–4 serious options delivered - Decision-ready, not quote chaos</li>
-        <li>0% factory commissions. Buyer-paid only</li>
-        <li>93% returning buyers. Teams that came back for another RFQ within 3 months</li>
-        <li>4.8/5 average rating after each delivered RFQ report</li>
-      </ul>
+    <div class="usp-item">
+      <div class="icon">🎯</div>
+      <h3>Alignment</h3>
+      <p><strong>Independent & buyer-paid only</strong><br>
+      No supplier commissions. No hidden incentives.</p>
     </div>
-  </section>
 
-  <!-- Pricing -->
-  <section id="pricing">
-    <div class="container">
-      <h2>Pricing Plans</h2>
-      <div class="pricing-cards">
-        <div class="pricing-card">
-          <h3>Starter RFQ</h3>
-          <p>From €1,250 per RFQ</p>
-          <ul>
-            <li>One product, one RFQ report with 2–4 factories</li>
-            <li>Purchase cost, risk grid, and recommendation</li>
-            <li>Suitable for new launches, range gaps or benchmarking</li>
-          </ul>
-          <button>Start with a Starter RFQ</button>
-        </div>
-        <div class="pricing-card">
-          <h3>Family RFQ</h3>
-          <p>From €3,500 per family</p>
-          <ul>
-            <li>RFQ on a small family of related SKUs (typically 3–10 items)</li>
-            <li>Combined report with margin and complexity trade-offs</li>
-            <li>Option for phased migrations and backup factories</li>
-          </ul>
-          <button>Request a Family RFQ</button>
-        </div>
-        <div class="pricing-card">
-          <h3>RFQ Plan</h3>
-          <p>From €9,900 per year</p>
-          <ul>
-            <li>Agreed number of RFQs per year or season (e.g. 6–12)</li>
-            <li>Lower effective cost per RFQ vs one-off projects</li>
-            <li>Prioritized planning and quarterly review with your team</li>
-          </ul>
-          <button>Discuss an RFQ Plan</button>
-        </div>
-      </div>
+    <div class="usp-item">
+      <div class="icon">📋</div>
+      <h3>Compliance readiness</h3>
+      <p><strong>REACH / EN / FSC / EUDR</strong><br>
+      Clear compliance signals plus document checklist.</p>
     </div>
-  </section>
 
-  <footer>
-    <div class="container">
-      <p>&copy; 2026 RFQ Ready. All rights reserved.</p>
+    <div class="usp-item">
+      <div class="icon">📦</div>
+      <h3>Packaging leverage</h3>
+      <p><strong>Lower landed cost</strong><br>
+      Carton optimization insights that reduce shipping cost.</p>
     </div>
-  </footer>
 
-  <script src="./script.js"></script>
+    <div class="usp-item">
+      <div class="icon">🧠</div>
+      <h3>Best-fit recommendation</h3>
+      <p><strong>One clear choice</strong><br>
+      Not a list — a recommendation with rationale.</p>
+    </div>
+
+  </div>
+</section>
+<section class="section how-it-works">
+  <h2>How RFQReady works</h2>
+  <p class="section-subtitle">
+    From sourcing brief to a clear buying decision — without noise.
+  </p>
+
+  <div class="steps-grid">
+    <div class="step">
+      <span class="icon">📝</span>
+      <h3>Define your brief</h3>
+      <p>Specs, volumes, compliance needs and target pricing.</p>
+    </div>
+
+    <div class="step">
+      <span class="icon">🔍</span>
+      <h3>Market scan & filtering</h3>
+      <p>Independent screening across suppliers, pricing logic and risk.</p>
+    </div>
+
+    <div class="step">
+      <span class="icon">📦</span>
+      <h3>Cost & packaging insight</h3>
+      <p>Carton efficiency and landed-cost implications included.</p>
+    </div>
+
+    <div class="step">
+      <span class="icon">✅</span>
+      <h3>Best-fit recommendation</h3>
+      <p>One clear option — explained and buyer-aligned.</p>
+    </div>
+  </div>
+</section>
+
+
+<section class="section why-trust">
+  <h2>Why buyers trust RFQReady</h2>
+
+  <div class="trust-grid">
+    <div class="trust-item">
+      <span class="icon">🧭</span>
+      <h3>Buyer-only incentives</h3>
+      <p>We are paid by buyers, not suppliers — no hidden bias.</p>
+    </div>
+
+    <div class="trust-item">
+      <span class="icon">🧠</span>
+      <h3>Decision-ready output</h3>
+      <p>Clear conclusions, not endless supplier lists.</p>
+    </div>
+
+    <div class="trust-item">
+      <span class="icon">📋</span>
+      <h3>Compliance built-in</h3>
+      <p>REACH, EN, FSC, EUDR signals with document checklist.</p>
+    </div>
+
+    <div class="trust-item">
+      <span class="icon">📉</span>
+      <h3>Cost-down mindset</h3>
+      <p>Margin, packaging and landed cost considered every time.</p>
+    </div>
+  </div>
+</section>
+
 </body>
 </html>
